--- a/js/index.html
+++ b/js/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="hello.js"></script>
+    <!-- <script src="hello.js"></script> -->
 </head>
 <body>
     <h1>Javascript Learning</h1>
+    <script>
+        a=10
+b=40
+sum=a+b
+console.log("sum ="+sum)
+document.write("<h1>sum =",sum ,"</h1>")
+    </script>
 </body>
 </html>
